# ghostty-android

./: .github-summary.md  .gitignore  .gitmodules  CLAUDE.md  CONTRIBUTING.md  LICENSE  Makefile  PROGRESS.md  QUICK_START.md  README.md  RENDERER_ARCHITECTURE.md  RENDERER_STATUS.md  STATUS.md  VISUAL_TESTING_FEEDBACK_LOOP.md  VISUAL_TESTING_SETUP.md  compare_screenshots.py  run_visual_tests.py  run_visual_tests_simple.py  shell.nix  test_feedback_loop.py
android/: .gitignore  README.md  build.gradle.kts  gradle.properties  settings.gradle.kts
android/app/: build.gradle.kts  proguard-rules.pro
android/app/src/main/cpp/: CMakeLists.txt  ghostty_bridge.c
android/renderer/: build.zig  build.zig.zon
android/renderer/include/: ghostty_renderer.h
android/renderer/src/: atlas_packer.zig  buffer.zig  codepoint_resolver.zig  (+17 more)
android/scripts/: build-android.sh  shell-android.nix
android/terminal-library/: build.gradle.kts  consumer-rules.pro  proguard-rules.pro
docs/: ARCHITECTURE.md  BUILD_GUIDE.md  BUILD_SUCCESS.md  DEV_STATUS.md  OPENGL_ANALYSIS_INDEX.md  OPENGL_RENDERER_ANALYSIS.md  RENDERER_QUICK_REFERENCE.md  RENDERER_STATUS.md  SPACING_ISSUE_ANALYSIS.md  TESTING.md  text-attributes-implementation.md
docs/archive/: BUILD.md  BUILD_SETUP.md  NIXOS_BUILD.md  STATUS.md
scripts/: build-android-abi.sh  build-jni-bridge-zig.sh  build-jni-bridge.sh  build-with-studio.sh  generate-android-libc.sh  gradle-build-native.sh
tests/: README.md  requirements.txt
tests/visual/: __init__.py  adb_controller.py  image_compare.py  run_tests.py  test_case.py  test_runner.py
(+47 files in other folders)
